--- a/ALL-in-One/index/index.html
+++ b/ALL-in-One/index/index.html
@@ -1,16 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>ALL-in-One</title>
-    <link rel="stylesheet" href="../css/css.css">
-    <link rel="stylesheet" href="../css/css.css">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <title>All-in-One</title>
+  <link rel="stylesheet" href="../css/mystyle.css">
+  
+  <script src="//production-assets.codepen.io/assets/editor/live/console_runner-079c09a0e3b9ff743e39ee2d5637b9216b3545af0de366d4b9aad9dc87e26bfd.js"></script>
+  <script src="//production-assets.codepen.io/assets/editor/live/events_runner-73716630c22bbc8cff4bd0f07b135f00a0bdc5d14629260c3ec49e5606f98fdd.js"></script>
+  <script src="//production-assets.codepen.io/assets/editor/live/css_live_reload_init-2c0dc5167d60a5af3ee189d570b1835129687ea2a61bee3513dee3a50c115a77.js"></script>
+  <meta charset="UTF-8">
+  <meta name="robots" content="noindex">
+  <link rel="shortcut icon" type="image/x-icon" href="//production-assets.codepen.io/assets/favicon/favicon-8ea04875e70c4b0bb41da869e81236e54394d63638a1ef12fa558a4a835f1164.ico">
+  <link rel="mask-icon" type="" href="//production-assets.codepen.io/assets/favicon/logo-pin-f2d2b6d2c61838f7e76325261b7195c27224080bc099486ddd6dccb469b8e8e6.svg" color="#111">
+  <link rel="canonical" href="https://codepen.io/anon/pen/OOBwdx">
 
 </head>
-<body>
+
 <div id="lampadario">
             <input type="radio" name="switch" value="on" />
             <input type="radio" name="switch" value="off" checked="checked"/>
@@ -19,13 +22,25 @@
             <div id="lampadina">             
               <div id="sorpresa">
                 <div id="footer">
-                    <div><h2>ALL-in-One</h2></div>
+                  <div>Willkommen auf unsere Website</div>
                 </div>
                 <div id="shadow">
-                    <div><h1>ALL-in-One</h1></div>
-                </div>
+                  <div>
+                    <h1>All-in-One</h1>
+                  </div>
+                </div
               </div>
             </div>
         </div>
-</body>
+</div>
+
+<script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js"></script>
+<script>/*
+* No Js pure CSS Light bulb
+* A pen by Federico Portoghese
+* www.federicoportoghese.it
+*/
+//# sourceURL=pen.js
+</script>
+<script src="//production-assets.codepen.io/assets/editor/live/check-c263eb37bf3a3d49b8311c096168b478f5750c61a1166ea2cc660498870d671f.js"></script>
 </html>
